# reddd

./: Cargo.toml  README.md
reddd/: Cargo.toml
reddd-macros/: Cargo.toml
reddd-macros/src/: lib.rs  usecase.rs  value_type.rs
reddd-macros/src/util/: fields.rs  mod.rs  structs.rs
reddd/src/domain/: entity.rs  mod.rs  repo.rs  typed_value.rs  usecase.rs  value_type.rs
reddd_macros/: Cargo.toml
reddd_macros/src/: entity.rs  lib.rs  value_type.rs
reddd_macros/src/util/: fields.rs  mod.rs
src/domain/: value_type.rs
