[package]
name = "reddd"
description = "Main crate"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# external deps
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

# internal deps
reddd_macros = { path = "../reddd_macros" }

[dev-dependencies]
fake = { version = "2", features = ["chrono", "derive", "uuid"] }
rand = "0"
