[package]
name = "reddd"
version = "0.2.3"
description = "Domain-Driven Design (DDD) toolkit."
keywords = ["ddd", "entity", "value-type"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["serde", "usecase"]
serde = ["dep:serde"]
usecase = []

[dependencies]
async-trait = "0"
cfg-if = "1"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

# internal
reddd-macros = { path = "../reddd-macros", version = "0.2" }

[dev-dependencies]
fake = { version = "2", features = ["chrono", "derive", "uuid"] }
rand = "0"
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
